CHANGES.txt - 2009-02-03
------------------------

CHANGES IN CUPS V1.4b3

	- Documentation fixes (STR #3044, STR #3057)
	- The scheduler no longer logs child processes killed via SIGKILL as
	  "crashed".
	- The printer link shown on the "job moved" template was bad (STR #3085)
	- Updated the HTML templates to use the HTML 4.01 DOCTYPE (STR #3086)
	- The scheduler did not track the "paused" reason properly if a
	  printer had other reasons associated with it.
	- cupsSendRequest() did not clear old local certificate auth data.
	- The PPD compiler did not search for localization files properly
	  (STR #3084)
	- cupsGetNamedDest() did not use the fallback default like
	  cupsGetDests*() (STR #3082)
	- The scheduler now provides a LogTimeFormat directive to enable
	  microseconds in the date and time that are logged.
	- The scheduler now provides a MultipleOperationTimeout directive to
	  control the timeout for multi-file print jobs.
	- The configure script incorrectly allowed Avahi to be used for DNS-SD
	  printer discovery (STR #3065)
	- The web interface and scheduler did not support URIs up to 1024 bytes
	  in length (STR #3072)
	- Fixed pdftops issues with page sizes (STR #3063)
	- Fixed pdftops issues with Ghostscript (STR #3062)
	- The scheduler incorrectly registered default profiles for PostScript
	  printers with no specified colorspace.
	- The scheduler incorrectly created an empty org.cups.printers.plist
	  file on Mac OS X.
	- cupsGetPPD3() did not look for local PPDs in the right directory.
	- SNMP lookups via side-channel did not work for NULL-VALUE and
	  and OCTET-STRING OIDs containing nul characters.
	- The libusb-based USB backend did not work.
	- The scheduler did not set the printer-commands attribute correctly
	  for some PPDs.
	- The ppdi utility did not work.
	- The web interface no longer uses multi-part output with old or broken
	  web browsers (STR #3049)
	- CUPS now conforms to the draft IPP/2.0 and IPP/2.1 specification.