@@ -4,6 +4,9 @@ CHANGES.txt - 2009-02-03
 CHANGES IN CUPS V1.4b3
 
 	- Documentation fixes (STR #3044, STR #3057)
+	- The network backends no longer report the SNMP "offline" status bit
+	  since some printers report this status when the printer is busy
+	  printing, warming up, etc.
 	- The scheduler no longer logs child processes killed via SIGKILL as
 	  "crashed".
 	- The printer link shown on the "job moved" template was bad (STR #3085)
